--- a/Limelight.css
+++ b/Limelight.css
@@ -1,15 +1,15 @@
 html {
-  font-family: "Dejavu Sans Mono";
-  font-size: 9pt;
-  background-color: #202020;
-  color: #FFFFFF;
-  padding: 0;
-  margin: 0;
+	font-family: "Dejavu Sans Mono", "Monaco", monospace;
+	font-size: 9pt;
+	background-color: #202020;
+	color: #FFFFFF;
+	padding: 0;
+	margin: 0;
 }
 
 body {
 	margin: 0;
-  padding: 0.5ex 1.5ex;
+	padding: 0.5ex 1.5ex;
 }
 body.console {}
 body.normal {
@@ -20,6 +20,13 @@ hr { margin: 0.5em 2em; }
 
 a {
 	color: inherit;
+}
+
+.inlineimage {
+	margin: 10px 20px 15px 0;
+	max-width: 200px;
+	max-height: 150px;
+	-webkit-box-shadow: 2px 2px 2px #888;
 }
 
 .line  { padding: 0.2ex 0; }
@@ -146,7 +153,7 @@ body.normal .sender[type=myself]:after {
 }
 
 .line[highlight=true] {
-  background-color: transparent;
+	background-color: transparent;
 }
 
 /* disable funky mirc colours */
@@ -155,7 +162,8 @@ body.normal .sender[type=myself]:after {
 
 /* Icons/logos for some popular apps/channels */
 
-html[channelname="#limechat"].normal {
+html[channelname="#limechat"].normal,
+html[channelname="##limechat"].normal {
 	background: #202020 url('Limelight/limechat.png') no-repeat fixed bottom right;
 }
 
@@ -186,4 +194,3 @@ html[channelname="##apple"].normal {
 html[channelname="#python"].normal {
 	background: #202020 url('Limelight/python.png') no-repeat fixed bottom right;
 }
-
