Use a proportional typeface

--- a/Loamlight.css
+++ b/Loamlight.css
@@ -1,5 +1,5 @@
 html {
-	font-family: "Dejavu Sans Mono", "Monaco", monospace;
+	font-family: "Lucida Grande", sans-serif;
 	font-size: 9pt;
 	background-color: #202020;
 	color: #FFFFFF;
