Wrap long actions in the content column too

--- a/Loamlight.css
+++ b/Loamlight.css
@@ -78,6 +78,7 @@ a {
 
 /* Messages in main view, but not console */
 body.normal .message[type=privmsg]          { padding-left: 17ex; display: block; }
+body.normal .message[type=action]           { padding-left: 17ex; display: block; }
 
 body.normal .message[type=notice]           { padding-left: 17ex; display: block; }
 body.normal .message[type=join]             { padding-left: 17ex; }
