--- a/Loamlight.css
+++ b/Loamlight.css
@@ -120,6 +120,8 @@ body.normal .sender[type=normal], body.normal .sender[type=myself] {
 	padding-right: 0.3ex;
 	text-align: right;
 	width: 15ex;
+	height: 3ex;
+	overflow: hidden;
 }
 
 body.normal div.line[type=action] .sender[type=normal], div.line[type=action] .sender[type=myself] {
