--- a/Loamlight.css
+++ b/Loamlight.css
@@ -77,30 +77,7 @@ a {
 }
 
 /* Messages in main view, but not console */
-body.normal .message[type=privmsg]          { padding-left: 17ex; display: block; }
-body.normal .message[type=action]           { padding-left: 17ex; display: block; }
-
-body.normal .message[type=notice]           { padding-left: 17ex; display: block; }
-body.normal .message[type=join]             { padding-left: 17ex; }
-body.normal .message[type=part]             { padding-left: 17ex; }
-body.normal .message[type=quit]             { padding-left: 17ex; }
-body.normal .message[type=kick]             { padding-left: 17ex; }
-body.normal .message[type=kill]             { padding-left: 17ex; }
-body.normal .message[type=nick]             { padding-left: 17ex; }
-body.normal .message[type=mode]             { padding-left: 17ex; }
-body.normal .message[type=topic]            { padding-left: 17ex; }
-body.normal .message[type=invite]           { padding-left: 17ex; }
-body.normal .message[type=wallops]          { padding-left: 17ex; }
-
-body.normal .message[type=system]           { padding-left: 17ex; }
-body.normal .message[type=error]            { padding-left: 17ex; }
-body.normal .message[type=reply]            { padding-left: 17ex; display: block; }
-body.normal .message[type=error_reply]      { padding-left: 17ex; }
-body.normal .message[type=dcc_send_send]    { padding-left: 17ex; }
-body.normal .message[type=dcc_send_receive] { padding-left: 17ex; }
-
-body.normal .message[type=debug_send]       { padding-left: 17ex; }
-body.normal .message[type=debug_receive]    { padding-left: 17ex; }
+body.normal .message { padding-left: 17ex; display: block; }
 
 /* Spans in line */
 
