Oops, make the myself action star sigil selector more specific than the generic one

--- a/Loamlight.css
+++ b/Loamlight.css
@@ -115,7 +115,7 @@ body.normal div.line[type=action] .sender:before {
 	margin-right: 1.5ex;
 }
 
-div.line[type=action] .sender[type=myself]:before {
+body.normal div.line[type=action] .sender[type=myself]:before {
 	content: "★";
 }
 
