Choose a neue font to euese

--- a/Loamlight.scss
+++ b/Loamlight.scss
@@ -1,6 +1,6 @@
 /* **** variables **** */
 
-$font: "Lucida Grande", sans-serif;
+$font: "Helvetica Neue", sans-serif;
 
 $inline-images-on-hover: false;
 
